@@ -1,3 +1,7 @@
+2012-09-25 bbirtles@mozilla.com
+	Remove maskType from mask element since it is now defined as the mask-type
+	property.
+
 2012-09-19 dschulze@adobe.com
 	Fxed typos.
 	Made correction on syntax for 'mask-image'. Compatible to WebKit again.
